--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">Header image by Lukas Riebling, used under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license</p>
+<p class="copyright text-muted">"Clean Blog" Bootstrap theme licensed
+  <a href="https://github.com/IronSummitMedia/startbootstrap/blob/gh-pages/LICENSE">Apache 2.0</a> by <a href="http://startbootstrap.com">Start Bootstrap</a>
+  </p>
                 </div>
             </div>
         </div>
