Removed circles at the bottom

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <ul class="list-inline text-center">
+                    <!--<ul class="list-inline text-center">
                         <li>
                             <a href="#">
                                 <span class="fa-stack fa-lg">
@@ -176,7 +176,7 @@
                                 </span>
                             </a>
                         </li>
-                    </ul>
+                    </ul>-->
                     <p class="copyright text-muted">Header image by Lukas Riebling, used under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license</p>
 <p class="copyright text-muted">"Clean Blog" Bootstrap theme licensed
   <a href="https://github.com/IronSummitMedia/startbootstrap/blob/gh-pages/LICENSE">Apache 2.0</a> by <a href="http://startbootstrap.com">Start Bootstrap</a>
